--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,12 @@
-@import "primeicons/primeicons.css";
+body {
+  background: whitesmoke;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+label {
+  color: var(--text-color);
+}
