Payer services created - First implementation New transaction page created (needs styling)

--- a/src/app/modules/payer/components/payer-container/payer-container.component.html
+++ b/src/app/modules/payer/components/payer-container/payer-container.component.html
@@ -1,6 +1,2 @@
 <p>payer-container works!</p>
-<router-outlet>
-    <app-payer-transaction></app-payer-transaction>
-    <app-payer-history></app-payer-history>
-    <app-payer-register></app-payer-register>
-</router-outlet>
+<router-outlet></router-outlet>
