--- a/src/app/modules/payer/components/payer-transaction/payer-transaction.component.html
+++ b/src/app/modules/payer/components/payer-transaction/payer-transaction.component.html
@@ -1,1 +1,23 @@
 <p>payer-transaction works!</p>
+<app-payer-shop-dropdown></app-payer-shop-dropdown>
+
+<div class="label-block">
+    <label class="block font-bold mb-2" for="weekly-expenses-limit"
+      >Amount of money</label
+    >
+
+    <p-inputNumber
+      mode="currency"
+      currency="EUR"
+      [(ngModel)]="amount"
+    />
+</div>
+
+<button
+pButton
+pRipple
+type="button"
+label="Send"
+class="p-button-primary"
+(click)="sendPayment()"
+></button>
