New transaction page implemented History page implemented Intro page for choosing user, shop, provider implemented Services done First attempt for styling

--- a/src/app/modules/payer/components/payer-history/payer-history.component.html
+++ b/src/app/modules/payer/components/payer-history/payer-history.component.html
@@ -1,1 +1,1 @@
-<p>payer-history works!</p>
+<app-transaction-table [transactionData]="data" *ngIf="history$ | async as data"></app-transaction-table>
