--- a/src/app/modules/payer/components/payer-container/payer-container.component.html
+++ b/src/app/modules/payer/components/payer-container/payer-container.component.html
@@ -1,2 +1,4 @@
-<p>payer-container works!</p>
+<div class="card">
+    <p-tabMenu class="tab-menu" [model]="items" [activeItem]="activeItem"></p-tabMenu>
+</div>
 <router-outlet></router-outlet>
