--- a/src/app/modules/payer/components/payer-register/payer-register.component.scss
+++ b/src/app/modules/payer/components/payer-register/payer-register.component.scss
@@ -1,13 +1,17 @@
 :host {
   form {
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-    margin: auto;
     display: flex;
     flex-direction: column;
     gap: 24px;
     padding: 24px;
     width: 35%;
     background: white;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 
     .account-type-btns {
       display: flex;
