--- a/src/app/modules/shop/shop-container/shop-container.component.html
+++ b/src/app/modules/shop/shop-container/shop-container.component.html
@@ -1,1 +1,3 @@
-<p>shop-container works!</p>
+<div class="card">
+    <p-tabMenu class="tab-menu" [model]="items" [activeItem]="activeItem"></p-tabMenu>
+</div>
