Created shop pages

--- a/src/app/shared/components/homepage/homepage.component.html
+++ b/src/app/shared/components/homepage/homepage.component.html
@@ -3,7 +3,7 @@
   type="button"
   label="Payer"
   class="p-button-primary"
-  [routerLink]="['./payer/transaction']"
+  [routerLink]="['./payer/register']"
   size="large"
 ></button>
 <button
@@ -11,7 +11,7 @@
   type="button"
   label="Shop"
   class="p-button-primary"
-  [routerLink]="['./shop']"
+  [routerLink]="['./shop/register']"
   size="large"
   severity="warning" 
 ></button>
