Provider pages added

--- a/src/app/shared/components/homepage/homepage.component.html
+++ b/src/app/shared/components/homepage/homepage.component.html
@@ -20,7 +20,7 @@
   type="button"
   label="Provider"
   class="p-button-primary"
-  [routerLink]="['./provider']"
+  [routerLink]="['./provider/register']"
   size="large"
   severity="success"
 ></button>
