--- a/src/app/modules/provider/components/provider-container/provider-container.component.html
+++ b/src/app/modules/provider/components/provider-container/provider-container.component.html
@@ -1,4 +1,4 @@
 <div class="card">
-    <p-tabMenu class="tab-menu" [model]="items" [activeItem]="activeItem"></p-tabMenu>
+    <p-tabMenu class="tab-menu" [model]="items" [activeItem]="activeItem" severity="success"></p-tabMenu>
 </div>
 <router-outlet></router-outlet>
