--- a/src/app/modules/payer/components/payer-register/payer-register.component.html
+++ b/src/app/modules/payer/components/payer-register/payer-register.component.html
@@ -66,7 +66,7 @@
   <p-inputGroup>
     <p-calendar
     placeholder="Date of birth"
-      formControlName="birthday"
+      formControlName="birthdate"
       [iconDisplay]="'input'"
       [showIcon]="true"
       inputId="icondisplay"
