--- a/src/app/shared/components/homepage/homepage.component.html
+++ b/src/app/shared/components/homepage/homepage.component.html
@@ -3,7 +3,7 @@
   type="button"
   label="Payer"
   class="p-button-primary"
-  [routerLink]="['./payer/register']"
+  [routerLink]="['./payer/login']"
   size="large"
 ></button>
 <button
