Commit changes about login

--- a/src/app/modules/payer/components/payer-register/payer-register.component.html
+++ b/src/app/modules/payer/components/payer-register/payer-register.component.html
@@ -8,8 +8,8 @@
       id="firstName"
       class="p-inputtext"
       pInputText
-      formControlName="firstName"
-      placeholder="First name"
+      formControlName="fullName"
+      placeholder="Full name"
     />
     <small
       class="p-error block"
@@ -29,9 +29,19 @@
     <input
       class="p-inputtext"
       pInputText
-      formControlName="lastName"
-      placeholder="Last name"
+      formControlName="username"
+      placeholder="Username"
     />
+  </p-inputGroup>
+
+  <p-inputGroup>
+    <p-inputGroupAddon>
+      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-key" viewBox="0 0 16 16">
+        <path d="M0 8a4 4 0 0 1 7.465-2H14a.5.5 0 0 1 .354.146l1.5 1.5a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0L13 9.207l-.646.647a.5.5 0 0 1-.708 0L11 9.207l-.646.647a.5.5 0 0 1-.708 0L9 9.207l-.646.647A.5.5 0 0 1 8 10h-.535A4 4 0 0 1 0 8m4-3a3 3 0 1 0 2.712 4.285A.5.5 0 0 1 7.163 9h.63l.853-.854a.5.5 0 0 1 .708 0l.646.647.646-.647a.5.5 0 0 1 .708 0l.646.647.646-.647a.5.5 0 0 1 .708 0l.646.647.793-.793-1-1h-6.63a.5.5 0 0 1-.451-.285A3 3 0 0 0 4 5"/>
+        <path d="M4 8a1 1 0 1 1-2 0 1 1 0 0 1 2 0"/>
+      </svg>
+    </p-inputGroupAddon>
+    <p-password class="password" formControlName="password" [feedback]="false" placeholder="Password" />
   </p-inputGroup>
 
   <p-inputGroup>
@@ -73,6 +83,8 @@
     />
   </p-inputGroup>
 
+
+  
   <div class="account-type-btns">
     <button
       pButton
@@ -93,7 +105,7 @@
     ></button>
   </div>
 
-  <div class="bank-account" *ngIf="profileForm.get('accountType')?.value === 0">
+  <div class="bank-account" *ngIf="fg.get('accountType')?.value === 0">
     <p-inputGroup>
       <p-inputGroupAddon>
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-credit-card" viewBox="0 0 16 16">
@@ -123,7 +135,7 @@
     </p-inputGroup>
   </div>
 
-  <div *ngIf="profileForm.get('accountType')?.value === 1">
+  <div *ngIf="fg.get('accountType')?.value === 1">
     <p-inputGroup>
       <p-inputGroupAddon>
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-paypal" viewBox="0 0 16 16">
@@ -139,7 +151,7 @@
     </p-inputGroup>
   </div>
 
-  <ng-container *ngIf="profileForm.get('accountType')?.value != null">
+  <ng-container *ngIf="fg.get('accountType')?.value != null">
     <div class="label-block">
       <label class="block font-bold mb-2" for="weekly-transfer-limit"
         >Weekly Transfer Limit</label
