--- a/src/app/shared/components/homepage/homepage.component.html
+++ b/src/app/shared/components/homepage/homepage.component.html
@@ -11,7 +11,7 @@
   type="button"
   label="Shop"
   class="p-button-primary"
-  [routerLink]="['./shop/register']"
+  [routerLink]="['./shop/login']"
   size="large"
   severity="warning" 
 ></button>
@@ -20,7 +20,7 @@
   type="button"
   label="Provider"
   class="p-button-primary"
-  [routerLink]="['./provider/register']"
+  [routerLink]="['./provider/login']"
   size="large"
   severity="success"
 ></button>
