--- a/src/app/modules/shop/components/shop-login/shop-login.component.scss
+++ b/src/app/modules/shop/components/shop-login/shop-login.component.scss
@@ -12,9 +12,20 @@
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-
-      .password {
-        display: inline-flex;
+  
+      .account-type-btns {
+        display: flex;
+        gap: 24px;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        align-content: center;
+        justify-content: space-evenly;
+        align-items: center;
+      }
+  
+      .bank-account {
+        display: flex;
+        gap: 24px;
       }
   
       input {
