--- a/src/app/shared/components/transaction-table/transaction-table.component.html
+++ b/src/app/shared/components/transaction-table/transaction-table.component.html
@@ -1,28 +1,13 @@
 <div class="card">
   <h5>Transaction history</h5>
-  <p-table 
-  #dt2
-  [value]="transactionData" 
-  [tableStyle]="{ 'min-width': '60rem' }"
-  [rows]="5"
-  [rowsPerPageOptions]="[5, 10, 20]"
-  [paginator]="true">
-
-  <ng-template pTemplate="caption">
-    <div class="flex">
-        <p-iconField iconPosition="left" class="ml-auto">
-            <p-inputIcon>
-                <i class="pi pi-search"></i>
-            </p-inputIcon>
-            <input 
-                pInputText 
-                type="text" 
-                (input)="dt2.filterGlobal($event.target, 'contains')" 
-                placeholder="Search keyword" />
-        </p-iconField>
-    </div>
-</ng-template>
-
+  <p-table
+    #dt2
+    [value]="transactionData"
+    [tableStyle]="{ 'min-width': '60rem' }"
+    [rows]="5"
+    [rowsPerPageOptions]="[5, 10, 20]"
+    [paginator]="true"
+  >
 
     <ng-template pTemplate="header">
       <tr *ngIf="fieldNames?.length">
@@ -35,48 +20,15 @@
           <p-sortIcon field="transaction.key"></p-sortIcon>
         </th>
       </tr>
-
-      <th>
-        <div *ngFor="let field of fieldNames">
-        <p-columnFilter field="field.name" matchMode="in" [showMenu]="false">
-            <!-- <ng-template pTemplate="filter" let-transaction let-filter="filterCallback">
-                <p-multiSelect
-                    [(ngModel)]="transaction.value" 
-                    placeholder="Any" 
-                    (onChange)="filter($event.value)" 
-                    optionLabel="name">
-                        <ng-template let-option pTemplate="item">
-                            <div class="inline-block vertical-align-middle">
-                                <span class="ml-1 mt-1">
-                                  <tr>
-                                    <td *ngIf="transaction.date">{{ transaction.date }}</td>
-                                    <td *ngIf="transaction?.sourceName">{{ transaction?.sourceName }}</td>
-                                    <td *ngIf="transaction?.targetName">{{ transaction?.targetName }}</td>
-                                    <td *ngIf="transaction.amount">{{ transaction.amount }}</td>
-                                  </tr>
-                                </span>
-                            </div>
-                        </ng-template>
-                </p-multiSelect>
-            </ng-template> -->
-        </p-columnFilter>
-      </div>
-    </th>
-
-
     </ng-template>
-      
-
 
     <ng-template pTemplate="body" let-transaction>
       <tr>
         <td *ngIf="transaction.date">{{ transaction.date }}</td>
         <td *ngIf="transaction?.sourceName">{{ transaction?.sourceName }}</td>
-        <td *ngIf="transaction?.targetName">{{ transaction?.targetName }}</td>
+        <td *ngIf="transaction?.shopName">{{ transaction?.shopName }}</td>
         <td *ngIf="transaction.amount">{{ transaction.amount }}</td>
       </tr>
-
     </ng-template>
-
   </p-table>
 </div>
