Added functionality about saving token to localstorage Added functionality about edit profile page

--- a/src/app/modules/payer/components/payer-container/payer-container.component.html
+++ b/src/app/modules/payer/components/payer-container/payer-container.component.html
@@ -1,4 +1,5 @@
 <div class="card">
     <p-tabMenu class="tab-menu" [model]="items" [activeItem]="activeItem"></p-tabMenu>
+    <h3 class="amount">{{ 'Balance: ' + amount + "€"}}</h3>
 </div>
 <router-outlet></router-outlet>
