--- a/src/app/modules/payer/components/payer-register/payer-register.component.scss
+++ b/src/app/modules/payer/components/payer-register/payer-register.component.scss
@@ -1,5 +1,7 @@
 :host {
   form {
+    overflow: auto;
+    max-height: 600px;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     display: flex;
     flex-direction: column;
