--- a/src/app/modules/payer/components/payer-container/payer-container.component.scss
+++ b/src/app/modules/payer/components/payer-container/payer-container.component.scss
@@ -1,9 +1,8 @@
-// .tab-menu {
-//     display: flex;
-//     margin: 0;
-//     padding: 0;
-//     list-style-type: none;
-//     flex-wrap: nowrap;
-//     justify-content: space-evenly;
-// }
-
+:host {
+    .amount {
+        position: absolute;
+        top: 0;
+        right: 0;
+        padding: 5px 30px;
+    }
+}
