--- a/src/app/modules/payer/components/payer-register/payer-register.component.html
+++ b/src/app/modules/payer/components/payer-register/payer-register.component.html
@@ -1,16 +1,17 @@
 <form [formGroup]="profileForm" (submit)="onSubmit()">
-  <h2>Create your account</h2>
+  <h2>{{mode === "register" ? "Create your account" : "Edit your profile"}}</h2>
   <p-inputGroup>
-    <p-inputGroupAddon>
-      <i class="pi pi-user"></i>
-    </p-inputGroupAddon>
-    <input
-      id="firstName"
-      class="p-inputtext"
-      pInputText
-      formControlName="fullName"
-      placeholder="Full name"
-    />
+      <p-inputGroupAddon>
+        <i class="pi pi-user"></i>
+      </p-inputGroupAddon>
+      <input
+        id="firstName"
+        class="p-inputtext"
+        pInputText
+        formControlName="fullName"
+        placeholder="Full name*"
+      />
+
     <small
       class="p-error block"
       *ngIf="
@@ -30,7 +31,7 @@
       class="p-inputtext"
       pInputText
       formControlName="username"
-      placeholder="Username"
+      placeholder="Username*"
     />
   </p-inputGroup>
 
@@ -41,7 +42,7 @@
         <path d="M4 8a1 1 0 1 1-2 0 1 1 0 0 1 2 0"/>
       </svg>
     </p-inputGroupAddon>
-    <p-password class="password" formControlName="password" [feedback]="false" placeholder="Password" />
+    <p-password class="password" formControlName="password" [feedback]="false" placeholder="Password*" />
   </p-inputGroup>
 
   <p-inputGroup>
