User log-in fixed Log out implementation added Update table transaction of provider view Small fixes

--- a/src/app/modules/provider/components/provider-register/provider-register.component.html
+++ b/src/app/modules/provider/components/provider-register/provider-register.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="profileForm" (submit)="onSubmit()">
-    <h2>Create your account</h2>
+  <h2>{{mode === "register" ? "Create your account" : "Edit your profile"}}</h2>
     <p-inputGroup>
       <p-inputGroupAddon>
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-buildings" viewBox="0 0 16 16">
