--- a/src/app/shared/components/transaction-table/transaction-table.component.html
+++ b/src/app/shared/components/transaction-table/transaction-table.component.html
@@ -24,10 +24,12 @@
 
     <ng-template pTemplate="body" let-transaction>
       <tr>
-        <td *ngIf="transaction.date">{{ transaction.date }}</td>
+        <td *ngIf="transaction.date">{{ transaction.date  | date:'yyyy-MM-dd'}}</td>
         <td *ngIf="transaction?.userName">{{ transaction?.userName }}</td>
         <td *ngIf="transaction?.shopName">{{ transaction?.shopName }}</td>
         <td *ngIf="transaction.amount">{{ transaction.amount }}</td>
+        <td *ngIf="transaction?.fee">{{ transaction?.fee }}</td>
+        <td *ngIf="transaction?.cashBack">{{ transaction?.cashBack }}</td>
       </tr>
     </ng-template>
   </p-table>
